# phenotyping-genmodels3d

./: .gitignore  CMakeLists.txt  README.md
config/: params_field.cfg  params_greenhouse.cfg  params_simulated.cfg
data/dataset_phytomers/field/: 01_3257-2_frame0043.pcd  01_3257-2_frame0043.ply  02_3260_frame0016.pcd  02_3260_frame0016.ply  03_3257-2_frame0026.pcd  03_3257-2_frame0026.ply
data/dataset_phytomers/greenhouse/: 0003.pcd  0003.ply  0006.pcd  0006.ply  0007.pcd  0007.ply  0011.pcd  0011.ply  0013.pcd  0013.ply  0015_occl1.pcd  0015_occl1.ply  groundtruth_vals_meshlab.xlsx
data/dataset_phytomers/simulated/noise_5perc/: 0000.pcd  0000.ply  0001.pcd  0001.ply  0002.pcd  0002.ply  0003.pcd  0003.ply  0004.pcd  0004.ply  0004.txt  0005.pcd  0005.ply
data/dataset_phytomers/simulated/noise_none/: 0000.pcd  0000.ply  0000.txt  0001.pcd  0001.ply  0001.txt  0002.pcd  0002.ply  0002.txt  0003.pcd  0003.ply  0003.txt  0004.pcd  0004.ply  0005.pcd  0005.ply  0005.txt
include/: CloudErrorMetrics.h  CrossEntropyOptimization.h  PairwiseRegistration.h  PhytomerGeneration.h  PointsFromSurfaceSampler.h  pcl-utils.h
src/: CloudErrorMetrics.cpp  CrossEntropyOptimization.cpp  PairwiseRegistration.cpp  PhytomerGeneration.cpp  PointsFromSurfaceSampler.cpp  main.cpp  pcl-utils.cpp
